--- a/HuaShanApp/app/src/main/res/drawable/bg_single_c4e1ff_10dp.xml
+++ b/HuaShanApp/app/src/main/res/drawable/bg_single_c4e1ff_10dp.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#bebebe" /> //#c4e1ff
+    <solid android:color="#e5e5e7" /> //#c4e1ff
     <corners
         android:topLeftRadius="0dp"
         android:topRightRadius="0dp"
