--- a/HuaShanApp/app/src/main/res/layout/activity_findpassword.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_findpassword.xml
@@ -88,7 +88,6 @@
 
                 >
 
-
                 <TextView
                     app:layout_widthPercent="20%"
                     android:layout_height="match_parent"
@@ -153,6 +152,7 @@
                     app:layout_marginLeftPercent="20%"
                     android:layout_gravity="left"
                     android:hint="请输入短信验证码"
+                    android:inputType="number"
                     android:singleLine="true"
                     android:maxLines="1"
                     android:background="@null"
@@ -184,6 +184,7 @@
                     app:layout_marginLeftPercent="20%"
                     android:layout_gravity="left"
                     android:hint="请输入至少6位密码"
+                    android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                     android:inputType="textPassword"
                     android:singleLine="true"
                     android:maxLines="1"
@@ -217,6 +218,7 @@
                     android:layout_gravity="left"
                     android:hint="请再次输入密码"
                     android:inputType="textPassword"
+                    android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                     android:singleLine="true"
                     android:maxLines="1"
                     android:background="@null"
