--- a/HuaShanApp/app/src/main/res/layout/layout_finished_item.xml
+++ b/HuaShanApp/app/src/main/res/layout/layout_finished_item.xml
@@ -224,15 +224,15 @@
                 android:textSize="@dimen/Myfinance_content_text_size_2"
                 android:textColor="#0894EC"/>
 
-            <TextView
-                app:layout_widthPercent="3%"
-                app:layout_heightPercent="10%"
-                app:layout_marginLeftPercent="31%"
-                app:layout_marginTopPercent="82.5%"
-                android:gravity="center_vertical"
-                android:text="/"
-                android:textSize="@dimen/Myfinance_content_text_size_2"
-                android:textColor="@color/Myfinance_content_text_color_2"/>
+            <!--<TextView-->
+                <!--app:layout_widthPercent="3%"-->
+                <!--app:layout_heightPercent="10%"-->
+                <!--app:layout_marginLeftPercent="31%"-->
+                <!--app:layout_marginTopPercent="82.5%"-->
+                <!--android:gravity="center_vertical"-->
+                <!--android:text="/"-->
+                <!--android:textSize="@dimen/Myfinance_content_text_size_2"-->
+                <!--android:textColor="@color/Myfinance_content_text_color_2"/>-->
 
             <TextView
                 android:id="@+id/download_btn"
@@ -243,7 +243,8 @@
                 android:gravity="center_vertical"
                 android:text="下载"
                 android:textSize="@dimen/Myfinance_content_text_size_2"
-                android:textColor="#0894EC"/>
+                android:textColor="#0894EC"
+                android:visibility="gone"/>
 
 
         </android.support.percent.PercentFrameLayout>
